# a2a-mcp-bridge-reference

./: .gitignore  README.md  SECURITY.md  pyproject.toml
bridge/: __init__.py  audit.py  cli.py  tools.py  walkthrough.py
bridge/a2a/: agent_card.py  auth.py  event_mapping.py  executor.py  sdk_compat.py  server.py  tokens_cli.py  turns.py
bridge/agent/: audit.py  events.py  graph.py  invoker.py  nodes.py  persistence.py  tools.py
bridge/agent/prompts/: review-budget.md
bridge/auth/: __init__.py  hmac.py
bridge/commands/: __init__.py  create_task.py  delete_task.py  get_task.py  list_tasks.py  update_task.py
bridge/consent/: __init__.py  demo_signer.py  url_mode.py
bridge/core/: __init__.py  auth.py  client.py  dispatcher.py  output.py  registry.py
bridge/mcp/: README.md  __init__.py  auth.py  invoker.py  server.py  tokens_cli.py  tools.py
bridge/rs/: __init__.py  jwt_resource_server.py
bridge/translation/: __init__.py  a2a_mcp.py
bridge/vault/: CANONICAL.md  __init__.py  in_process.py  interface.py  oauth.py
deploy/: server.py
docs/: architecture.md  rationale.md
tests/: conftest.py
tests/e2e/: test_audit_fidelity.py  test_dispatcher_vault_integration.py  test_mcp_hitl_building_blocks.py  test_parameter_drift_e2e.py  test_scope_enforcement.py  test_three_layer_enforcement.py
tests/protocol/: test_consent_server.py  test_mcp_read_filter.py  test_mcp_server.py
tests/unit/: test_canonical_fixtures.py  test_in_process_vault.py  test_oauth_vault.py  test_token_store.py  test_tools_registry.py  test_translation.py
