[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-mcp-bridge-reference"
version = "0.1.0"
description = "Reference implementation of a stateful, HITL-aware A2A↔MCP bridge with parameter-bound authorization."
requires-python = ">=3.11"
# Core: stdlib-only.
# The Vault, RS, dispatcher, commands, CLI, and walkthrough require
# zero third-party packages.
dependencies = []

[project.scripts]
bridge = "bridge.cli:main"

[project.optional-dependencies]
# MCP HTTP surface (bridge.mcp.*) and URL-mode consent server
# (bridge.consent.url_mode). Pulls in Starlette + uvicorn + the
# Anthropic MCP SDK. Required if you want to expose the protocol
# endpoints; the CLI demos run without it.
mcp = [
    "mcp>=1.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",   # required by Starlette's form parsing in bridge.consent.url_mode
]
# Test runner.
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
